--- a/ChartSampleApp/ChartSampleApp.csproj
+++ b/ChartSampleApp/ChartSampleApp.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UnseonChartLib\UnseonChartLib.csproj" />
+  </ItemGroup>
+
 </Project>
